--- a/.github/workflows/hydrun.yaml
+++ b/.github/workflows/hydrun.yaml
@@ -6,6 +6,9 @@ on:
   schedule:
     - cron: "0 0 * * 0"
 
+permissions:
+  contents: write
+
 jobs:
   build-linux:
     runs-on: ubuntu-latest
@@ -14,17 +17,17 @@ jobs:
         target:
           - id: test
             src: .
-            os: golang:bullseye
-            flags: -e '--privileged -v /var/run/docker.sock:/var/run/docker.sock --net host'
+            os: golang:bookworm
+            flags: ""
             cmd: GOFLAGS="-short" ./Hydrunfile test
             dst: out/*
-          - id: go
+          - id: go-goit
             src: .
-            os: golang:bullseye
-            flags: -e '--privileged -v /var/run/docker.sock:/var/run/docker.sock --net host'
+            os: golang:bookworm
+            flags: ""
             cmd: ./Hydrunfile go goit
             dst: out/*
-          - id: gccgo
+          - id: gccgo-goit
             src: .
             os: ghcr.io/pojntfx/bagccgop-base-sid
             flags: -e '--privileged'
@@ -57,6 +60,7 @@ jobs:
         with:
           name: ${{ matrix.target.id }}
           path: ${{ matrix.target.dst }}
+
   publish-linux:
     runs-on: ubuntu-latest
     needs: build-linux
@@ -68,12 +72,15 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           path: /tmp/out
+      - name: Extract branch name
+        id: extract_branch
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       - name: Publish pre-release to GitHub releases
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: unstable
+          automatic_release_tag: release-${{ steps.extract_branch.outputs.branch }}
           prerelease: true
           files: |
             /tmp/out/*/*
