--- a/.github/workflows/hydrun.yaml
+++ b/.github/workflows/hydrun.yaml
@@ -20,7 +20,7 @@ jobs:
             os: golang:bookworm
             flags: ""
             cmd: GOFLAGS="-short" ./Hydrunfile test
-            dst: out/*
+            dst: out/nonexistent
           - id: go-goit
             src: .
             os: golang:bookworm
